# peoplepeople

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: helpers.py  persons.py
