[tool.poetry]
name = "peoplepeople"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.61.2"}
mimesis = "^4.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.2"
pytest = "^6.1.2"
pytest-clarity = "^0.3.0-alpha.0"
pytest-emoji = "^0.2.0"
pytest-cov = "^2.10.1"
pytest-html = "^3.0.0"
ipython = "^7.19.0"
attrs = "^20.3.0"
prettyprinter = "^0.18.0"
pyperclip = "^1.8.1"
pytest-pythonpath = "^0.7.3"
pytest-mimesis = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
